--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -38,6 +38,7 @@
 	.description {
 		background-color: #EEEEEE;
 		font-size: 0.8em;
+		text-align: center;
 	}
 
 }
@@ -181,7 +182,7 @@
 
 .spotdetail-status-panel {
 	background-color: #C3C3C3;
-	margin-bottom: 0.7em;
+	margin-bottom: 0.5em;
 	padding-bottom: 0.3em;
 	border-bottom-right-radius: 0.2em;
 	border-bottom-left-radius: 0.2em;
