moved spot detail buttons back  in status panel, design changes

--- a/src/res/css/app-default.css
+++ b/src/res/css/app-default.css
@@ -9951,73 +9951,74 @@ input[type="search"]::-webkit-search-cancel-button {
 /* line 183, app-default.scss */
 .spotdetail-status-panel {
   background-color: #C3C3C3;
-  margin-bottom: 0.7em;
+  margin-bottom: 0.5em;
   padding-bottom: 0.3em;
   border-bottom-right-radius: 0.2em;
   border-bottom-left-radius: 0.2em;
+  box-shadow: 3px 3px 0.5em 0.1em gray;
 }
 
-/* line 191, app-default.scss */
+/* line 192, app-default.scss */
 .spotdetail-status {
   margin: 5px;
 }
-/* line 195, app-default.scss */
+/* line 196, app-default.scss */
 .spotdetail-status div {
   padding: 3px;
 }
-/* line 199, app-default.scss */
+/* line 200, app-default.scss */
 .spotdetail-status div.key {
   width: 120px;
   float: left;
   font-weight: bold;
 }
-/* line 205, app-default.scss */
+/* line 206, app-default.scss */
 .spotdetail-status div.value {
   text-align: right;
   display: inline-block;
   /*padding: 3px;*/
 }
-/* line 211, app-default.scss */
+/* line 212, app-default.scss */
 .spotdetail-status div.order_placed {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
-/* line 216, app-default.scss */
+/* line 217, app-default.scss */
 .spotdetail-status div.payment_request {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
-/* line 221, app-default.scss */
+/* line 222, app-default.scss */
 .spotdetail-status div.checkedin {
   border: 1px solid black;
   background-color: green;
   /*padding: 3px;*/
 }
 
-/* line 229, app-default.scss */
+/* line 230, app-default.scss */
 .spotdetail-status .order_placed {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
 
-/* line 235, app-default.scss */
+/* line 236, app-default.scss */
 .spotdetail-status .payment_request {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
 
-/* line 241, app-default.scss */
+/* line 242, app-default.scss */
 .spotdetail-status .checkedin {
   border: 1px solid black;
   background-color: green;
   /*padding: 3px;*/
 }
 
-/* line 247, app-default.scss */
+/* line 248, app-default.scss */
 .spotdetail-statistics {
   position: relative;
   top: 10px;
@@ -10031,7 +10032,7 @@ input[type="search"]::-webkit-search-cancel-button {
   min-width: 40px;
 }
 
-/* line 260, app-default.scss */
+/* line 261, app-default.scss */
 .spotdetail-close {
   background-color: black;
   border-radius: 1em;
@@ -10045,14 +10046,14 @@ input[type="search"]::-webkit-search-cancel-button {
   top: 3px;
 }
 
-/* line 273, app-default.scss */
+/* line 274, app-default.scss */
 .spotdetailitem-customer-label {
   background-color: #EEEEEE;
   text-align: center;
   font-weight: bold;
 }
 
-/* line 279, app-default.scss */
+/* line 280, app-default.scss */
 .spotdetailitem-flag {
   width: 10%;
   top: 0;
@@ -10063,14 +10064,14 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-left: 5px;
 }
 
-/* line 290, app-default.scss */
+/* line 291, app-default.scss */
 .spotdetailitem-order {
   /*width: 70%;*/
   margin-bottom: 20px;
   font-size: 0.8em;
 }
 
-/* line 296, app-default.scss */
+/* line 297, app-default.scss */
 .spotdetailitem-order h2 {
   font-weight: bold;
   /*float: left;*/
@@ -10078,34 +10079,34 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-right: 10px;
 }
 
-/* line 303, app-default.scss */
+/* line 304, app-default.scss */
 .spotdetailitem-order h4 {
   font-size: 1em;
 }
 
-/* line 307, app-default.scss */
+/* line 308, app-default.scss */
 .spotdetailitem-order h3 {
   font-size: 1em;
   font-weight: bold;
 }
 
-/* line 312, app-default.scss */
+/* line 313, app-default.scss */
 .spotdetailitem-order-cancel {
   text-decoration: line-through;
 }
 
-/* line 316, app-default.scss */
+/* line 317, app-default.scss */
 .spotdetailitem-order-cancel h2 {
   text-decoration: line-through;
 }
 
-/* line 320, app-default.scss */
+/* line 321, app-default.scss */
 .x-button-icon.spotdetailitem-confirm, .x-button .x-button-icon.x-icon-mask.spotdetailitem-confirm {
   -webkit-mask-image: url("../images/check_icon.png");
   /*background-image: url('../images/check_icon.png');*/
 }
 
-/* line 325, app-default.scss */
+/* line 326, app-default.scss */
 .spotdetailitem-order div:nth-of-type(1) {
   /*position: absolute; 
   right: 0; 
@@ -10114,13 +10115,13 @@ input[type="search"]::-webkit-search-cancel-button {
   	padding-right: 5px;*/
 }
 
-/* line 333, app-default.scss */
+/* line 334, app-default.scss */
 .spotdetailitem-order .choices {
   clear: both;
   text-align: left;
 }
 
-/* line 338, app-default.scss */
+/* line 339, app-default.scss */
 .spotdetailitem-confirm {
   top: 0;
   /*position: absolute;*/
@@ -10128,7 +10129,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 10%;*/
 }
 
-/* line 345, app-default.scss */
+/* line 346, app-default.scss */
 .spotdetailitem-cancel {
   /*width: 10%;*/
   top: 0;
@@ -10137,18 +10138,18 @@ input[type="search"]::-webkit-search-cancel-button {
   /*float: left;*/
 }
 
-/* line 352, app-default.scss */
+/* line 353, app-default.scss */
 .cancel-all {
   -webkit-mask-image: url("res/images/forbidden.png");
 }
 
 /* request view */
-/* line 358, app-default.scss */
+/* line 359, app-default.scss */
 .requestitem-container {
   margin: 0.3em;
 }
 
-/* line 362, app-default.scss */
+/* line 363, app-default.scss */
 .requestitem-wrapper {
   /*border: 1px solid #C3C3C3;*/
   /*background-color: #c3c3c3;*/
@@ -10157,7 +10158,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: black;
 }
 
-/* line 370, app-default.scss */
+/* line 371, app-default.scss */
 .requestitem-spot {
   border: 1px solid #000;
   background-color: #4975A2;
@@ -10168,7 +10169,7 @@ input[type="search"]::-webkit-search-cancel-button {
   word-break: break-word;
 }
 
-/* line 380, app-default.scss */
+/* line 381, app-default.scss */
 .requestitem-customer {
   border: 1px solid #000;
   background-color: #C6D7E9;
@@ -10183,7 +10184,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 65%;*/
 }
 
-/* line 394, app-default.scss */
+/* line 395, app-default.scss */
 .requestitem-time {
   border: 1px solid #000;
   background-color: #DFE8CB;
@@ -10197,13 +10198,13 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 25%;*/
 }
 
-/* line 407, app-default.scss */
+/* line 408, app-default.scss */
 .requestitem-wrapper-pressed {
   /*background-color: #F5B800;*/
   color: white;
 }
 
-/* line 412, app-default.scss */
+/* line 413, app-default.scss */
 .requestitem-alert {
   -webkit-animation-name: blinker;
   -webkit-animation-iteration-count: infinite;
@@ -10212,12 +10213,12 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* history view */
-/* line 420, app-default.scss */
+/* line 421, app-default.scss */
 .historyitem-container {
   margin: 0.3em;
 }
 
-/* line 424, app-default.scss */
+/* line 425, app-default.scss */
 .historyitem-wrapper {
   /*border: 1px solid #C3C3C3;*/
   /*background-color: #c3c3c3;*/
@@ -10226,7 +10227,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: black;
 }
 
-/* line 432, app-default.scss */
+/* line 433, app-default.scss */
 .historyitem-spot {
   border: 1px solid #000;
   background-color: #4975A2;
@@ -10237,7 +10238,7 @@ input[type="search"]::-webkit-search-cancel-button {
   word-break: break-word;
 }
 
-/* line 442, app-default.scss */
+/* line 443, app-default.scss */
 .historyitem-customer {
   border: 1px solid #000;
   background-color: #C6D7E9;
@@ -10252,7 +10253,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 20%;*/
 }
 
-/* line 456, app-default.scss */
+/* line 457, app-default.scss */
 .historyitem-time {
   border: 1px solid #000;
   background-color: #DFE8CB;
@@ -10267,7 +10268,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 15%;*/
 }
 
-/* line 470, app-default.scss */
+/* line 471, app-default.scss */
 .historyitem-total {
   border: 1px solid #000;
   background-color: #D0F5A9;
@@ -10280,12 +10281,12 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 10%;*/
 }
 
-/* line 482, app-default.scss */
+/* line 483, app-default.scss */
 .historyitem-wrapper-pressed {
   color: white;
 }
 
-/* line 486, app-default.scss */
+/* line 487, app-default.scss */
 .history-info-panel {
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -10294,7 +10295,7 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: #C3C3C3;
 }
 
-/* line 494, app-default.scss */
+/* line 495, app-default.scss */
 .history-info-panel .row {
   display: -webkit-box;
   -webkit-box-orient: horizontal;
@@ -10302,13 +10303,13 @@ input[type="search"]::-webkit-search-cancel-button {
   /*	-webkit-box-pack: end;*/
 }
 
-/* line 501, app-default.scss */
+/* line 502, app-default.scss */
 .history-info-panel .row > div {
   /*-webkit-box-flex: 1;*/
   width: 50%;
 }
 
-/* line 506, app-default.scss */
+/* line 507, app-default.scss */
 .history-detail-list-title {
   font-size: 1.2em;
   font-weight: bold;
@@ -10317,7 +10318,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* connections status indicator in bottom toolbar */
-/* line 518, app-default.scss */
+/* line 519, app-default.scss */
 .status-indicator-ONLINE .status {
   width: 1.2em;
   height: 1.2em;
@@ -10328,7 +10329,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 532, app-default.scss */
+/* line 533, app-default.scss */
 .status-indicator-TIMEOUT .status {
   width: 1.2em;
   height: 1.2em;
@@ -10339,7 +10340,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 544, app-default.scss */
+/* line 545, app-default.scss */
 .status-indicator-RECONNECT .status {
   width: 1.2em;
   height: 1.2em;
@@ -10350,7 +10351,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 556, app-default.scss */
+/* line 557, app-default.scss */
 .status-indicator-INITIALIZING .status {
   width: 1.2em;
   height: 1.2em;
@@ -10361,7 +10362,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 568, app-default.scss */
+/* line 569, app-default.scss */
 .status-indicator-CONNECTION_LOST .status {
   width: 1.2em;
   height: 1.2em;
@@ -10372,7 +10373,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 580, app-default.scss */
+/* line 581, app-default.scss */
 .status-indicator-DISCONNECTED .status {
   width: 1.2em;
   height: 1.2em;
@@ -10384,20 +10385,20 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* Volume Button */
-/* line 593, app-default.scss */
+/* line 594, app-default.scss */
 .volume_mute {
   background-image: none !important;
   background-color: #FA5858 !important;
 }
 
-/* line 598, app-default.scss */
+/* line 599, app-default.scss */
 .volume {
   background-image: none !important;
   background-color: #64FF64 !important;
 }
 
 /* Lock button */
-/* line 605, app-default.scss */
+/* line 606, app-default.scss */
 .locked-button .x-button-icon {
   -webkit-mask-image: url("/cockpit/res/images/lock_closed.png");
   background-color: black;
