--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -186,6 +186,7 @@
 	padding-bottom: 0.3em;
 	border-bottom-right-radius: 0.2em;
 	border-bottom-left-radius: 0.2em;
+	box-shadow: 3px 3px 0.5em 0.1em gray;
 }
 
 .spotdetail-status {
